[package]
name = "gstreamer-cucumber"
version = "0.1.0"
edition = "2021"
description = "Behavior-Driven Development framework for GStreamer"
authors = ["Thibault Saunier <tsaunier@igalia.com>", "Philippe Normand <philn@igalia.com"]
license = "MIT"
repository = "https://github.com/philn/gstreamer-cucumber"
documentation = "https://philn.github.io/gstreamer-cucumber/"
keywords = ["multimedia"]
categories = ["multimedia"]
readme = "README.md"

[dependencies]
cucumber = "0.12"
async-trait = "0.1.52"
# TODO: Switch to upstream repo after gstreamer-validate made it upstream...
gstreamer = { git = "https://gitlab.freedesktop.org/philn/gstreamer-rs.git", branch = "validate-crate", package = "gstreamer", features = ["v1_18"] }
gstreamer-video = { git = "https://gitlab.freedesktop.org/philn/gstreamer-rs.git", branch = "validate-crate", package = "gstreamer-video", features = ["v1_18"] }
gstreamer-validate = { git = "https://gitlab.freedesktop.org/philn/gstreamer-rs.git", branch = "validate-crate", package = "gstreamer-validate", features = ["v1_22"], optional = true }
anyhow = "1"
tempfile = "3"
once_cell = "1.0"
futures = "0.3.17"
async-std = {version = "1.10.0", features = ["attributes"]}
#color-thief = "0.2"
# https://github.com/RazrFalcon/color-thief-rs/pull/4
color-thief = { git = "https://github.com/philn/color-thief-rs", branch = "max-colors-respect" }
color-name = "1.0.0"
glib = "0.15"

[[test]]
name = "basic"
harness = false

[features]
validate = ["gstreamer-validate"]